--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.12.16",
+    "lucide-react": "^0.292.0",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
